Initial commit: Add complete Smart File Organizer application